Change the header of WRT to be fixed on mobile to always have the closing X in view.

--- a/scss/partials/_wrt.scss
+++ b/scss/partials/_wrt.scss
@@ -115,8 +115,9 @@ div.wrt-popup-container {
       padding: 12px 16px;
 
       @include mobile() {
-        position: relative;
+        position: fixed;
         border-bottom: 1px solid $ultra_light_grey;
+        z-index: 2;
       }
 
       div.wrt-popup-header-title {
@@ -157,6 +158,10 @@ div.wrt-popup-container {
 
     div.wrt-popup-inner {
       padding: 24px 0;
+
+      @include mobile() {
+        padding-top: 80px;
+      }
 
       div.wrt-chart-container {
         margin-bottom: 24px;
